2003-07-2  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlSerializationReaderInterpreter.cs: Use the parameter type when getting the Add method
	  for adding elements to a list.

2003-06-31  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapReflectionImporter.cs, XmlReflectionImporter.cs: Fixed so XmlIncludeAttribute and 
	  SoapIncludeAttribute are now transitive (if class A includes class B, and B includes C, then 
	  A includes C).

2003-06-30  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapReflectionImporter.cs, XmlReflectionImporter.cs, XmlTypeMapping.cs: 
	  Added support for serialization of enums with the Flags attribute.

2003-06-30  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapReflectionImporter.cs: Fix support for DataType in class members.
	* TypeData.cs: Don't use "Index" name to get indexer property. Indexer properties
	  can have other names.
	* TypeTranslator.cs, XmlCustomFormatter.cs: Added support for "time" and "data" xml types.
	* XmlReflectionImporter.cs, XmlTypeMapElementInfo.cs, XmlSerializationReader.cs,
	  XmlSerializationWriter.cs, XmlTypeMapElementInfo.cs, XmlTypeMapping.cs: 
	  Fix support for DataType in class members.
	* XmlSerializationReaderInterpreter.cs, XmlSerializationWriterInterpreter.cs: 
	  Added support for array of primitive types in attributes.

2003-06-28  Lluis Sanchez Gual <lluis@ximian.com>

	* TypeData.cs: Type of item of ICollections is now taken from the Item(int) property. Add() can
	  be overlodaded, so it is not good for this.
	* XmlSerializationWriterInterpreter.cs: Fix ambiguity bug when getting Item property of a collection.

2003-06-24  Lluis Sanchez Gual <lluis@ximian.com>

	* XmlTypeMapElementInfo.cs: no need to compare nesting level in Equals.
	* XmlReflectionImporter.cs: Changed nullable default. Assign member's namespace to an
	  array if the namespace is not specified in XmlArrayItemAttribute.

2003-06-17  Lluis Sanchez Gual <lluis@ximian.com>
